thumbnails at top

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - THUMBNAIL_BUCKET=${THUMBNAIL_BUCKET:-thumbnails}
       - THUMBNAIL_WIDTH=${THUMBNAIL_WIDTH:-400}
       - THUMBNAIL_HEIGHT=${THUMBNAIL_HEIGHT:-300}
+      - THUMBNAIL_CROP_POSITION=${THUMBNAIL_CROP_POSITION:-top}
       - MAX_TEXT_LENGTH=${MAX_TEXT_LENGTH:-51200}
       - POLL_INTERVAL=${POLL_INTERVAL:-5}
       - MAX_RETRIES=${MAX_RETRIES:-3}
