--- a/env.example
+++ b/env.example
@@ -9,6 +9,7 @@ THUMBNAIL_BUCKET=thumbnails
 # Processing
 THUMBNAIL_WIDTH=400
 THUMBNAIL_HEIGHT=300
+THUMBNAIL_CROP_POSITION=top  # "top" or "center" - vertical crop position for tall images
 MAX_TEXT_LENGTH=51200
 POLL_INTERVAL=5
 MAX_RETRIES=3
