larger thumbnails, better dwg handling

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,12 @@ services:
       - THUMBNAIL_BUCKET=${THUMBNAIL_BUCKET:-thumbnails}
       - THUMBNAIL_WIDTH=${THUMBNAIL_WIDTH:-400}
       - THUMBNAIL_HEIGHT=${THUMBNAIL_HEIGHT:-300}
+      - THUMBNAIL_LARGE_WIDTH=${THUMBNAIL_LARGE_WIDTH:-800}
+      - THUMBNAIL_LARGE_HEIGHT=${THUMBNAIL_LARGE_HEIGHT:-600}
+      - THUMBNAIL_SMALL_EXTENSIONS=${THUMBNAIL_SMALL_EXTENSIONS:-pdf,png,jpg,jpeg,heic,heif,gif}
       - THUMBNAIL_CROP_POSITION=${THUMBNAIL_CROP_POSITION:-top}
+      - DWG_INTERMEDIATE_DPI=${DWG_INTERMEDIATE_DPI:-600}
+      - DWG_WHITE_THRESHOLD=${DWG_WHITE_THRESHOLD:-250}
       - MAX_TEXT_LENGTH=${MAX_TEXT_LENGTH:-51200}
       - POLL_INTERVAL=${POLL_INTERVAL:-5}
       - MAX_RETRIES=${MAX_RETRIES:-3}
