--- a/env.example
+++ b/env.example
@@ -6,10 +6,19 @@ SUPABASE_SERVICE_KEY=your-service-key
 STORAGE_BUCKET=files
 THUMBNAIL_BUCKET=thumbnails
 
-# Processing
-THUMBNAIL_WIDTH=400
-THUMBNAIL_HEIGHT=300
-THUMBNAIL_CROP_POSITION=top  # "top" or "center" - vertical crop position for tall images
+# Processing - Thumbnail dimensions
+THUMBNAIL_WIDTH=400             # Default thumbnail width (for files matching THUMBNAIL_SMALL_EXTENSIONS)
+THUMBNAIL_HEIGHT=300            # Default thumbnail height
+THUMBNAIL_LARGE_WIDTH=800       # Larger thumbnail width (for all other supported file types)
+THUMBNAIL_LARGE_HEIGHT=600      # Larger thumbnail height
+THUMBNAIL_SMALL_EXTENSIONS=pdf,png,jpg,jpeg,heic,heif,gif  # Comma-separated extensions that use smaller size
+THUMBNAIL_CROP_POSITION=top     # "top" or "center" - vertical crop position for tall images
+
+# DWG processing - Content-aware cropping
+DWG_INTERMEDIATE_DPI=600        # High DPI for content detection before cropping
+DWG_WHITE_THRESHOLD=250         # Pixel value above which is considered "white" (0-255)
+
+# Other settings
 MAX_TEXT_LENGTH=51200
 POLL_INTERVAL=5
 MAX_RETRIES=3
