--- a/env.example
+++ b/env.example
@@ -18,13 +18,25 @@ THUMBNAIL_CROP_POSITION=top     # "top" or "center" - vertical crop position for
 DWG_INTERMEDIATE_DPI=600        # High DPI for content detection before cropping
 DWG_WHITE_THRESHOLD=250         # Pixel value above which is considered "white" (0-255)
 
-# Other settings
+# Text extraction
 MAX_TEXT_LENGTH=51200
+
+# Queue polling
 POLL_INTERVAL=5
 MAX_RETRIES=3
+
+# Orchestrator (secure architecture only)
+PROCESSOR_IMAGE=tte-processor:latest
+PROCESSOR_RUNTIME=runsc         # runsc (gVisor), kata, or runc (standard Docker)
+PROCESSOR_TIMEOUT=600           # Max processing time per job (seconds)
+PROCESSOR_MEMORY=2g             # Memory limit for processor container
+PROCESSOR_CPUS=2                # CPU limit for processor container
+
+# QCAD (DWG/DXF conversion)
+QCAD_IMAGE=arjankalfsbeek/qcad:latest
+QCAD_EPHEMERAL=true             # true = fresh container per DWG (more secure), false = persistent
 
 # Logging
 LOG_LEVEL=INFO
 BETTERSTACK_SOURCE_TOKEN=
 BETTERSTACK_INGEST_HOST=
-
