--- a/env.example
+++ b/env.example
@@ -1,4 +1,9 @@
-# Supabase
+# Database - Minimal roles (direct PostgreSQL, more secure than REST API)
+# These roles have minimal permissions - see ibhelmDB/supabase/schema/code/service_roles.sql
+TTE_FETCHER_DB_DSN=postgresql://tte_fetcher:CHANGE_ME@localhost:5432/postgres
+TTE_UPLOADER_DB_DSN=postgresql://tte_uploader:CHANGE_ME@localhost:5432/postgres
+
+# S3 Storage - Still using service key for S3 (TODO: create minimal S3 policies)
 SUPABASE_URL=https://your-supabase.example.com
 SUPABASE_SERVICE_KEY=your-service-key
 
