--- a/docker-compose.secure.yml
+++ b/docker-compose.secure.yml
@@ -146,13 +146,14 @@ services:
     restart: unless-stopped
     network_mode: none
     read_only: true
-    mem_limit: 4g
+    mem_limit: 6g
     tmpfs:
       - /tmp:size=1g,mode=1777
     volumes:
       - tte-ocr-exchange:/ocr-exchange
     environment:
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
+      - MAX_IMAGE_DIMENSION=${MAX_IMAGE_DIMENSION:-4000}
 
   # Build-only service: creates the OCR image
   ocr-build:
